Fixed the alignment of the Header
Fixed the alignment of the Header

--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ header span.logoline-top{
     font-size: medium;
     font-weight: 300;
     position: relative;
-    top: -3px;
+    top: -1px;
     left:-3px;
 }
 
@@ -1448,7 +1448,6 @@ border:unset;
 
 .navbar {
     position: relative !important;
-    top: -4.5rem !important; /*-1rem*/
     float: right !important;
     right: 1rem !important;
     /* position: fixed !important;
@@ -1762,7 +1761,7 @@ outline:red;
 }
 
 .navbar {
-    top: -4rem !important;
+    top: -1.3rem !important;
 }
 
 .border-right{
@@ -1881,8 +1880,8 @@ outline:red;
     font-size: x-small;
     font-weight: 300;
     position: relative;
-    top: -3px;
-    left:0px;
+    top: -2px;
+    left: 0px;
 }
 }
 
